--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,14 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.header{
+  text-align: center;
+}
+
+.content{
+  margin-top: 30px;
+}
+
 .flex{
   display: flex;
 }
@@ -11,6 +19,7 @@ body {
 .column{
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .row{
@@ -19,5 +28,26 @@ body {
 }
 
 .kanaImg{
-  width: 100px;
+  height: 100px;
+}
+
+.kanaEn{
+  font-size: 5.4rem;
+}
+
+.kanaJpn{
+  font-size: 5.4rem;
+  height: 100px;
+  margin-right: 20px;
+}
+
+.nextKana {
+  margin-top: 50px;
+}
+
+.nextKana button{
+  font-size: 1rem;
+  padding: 10px;
+  background-color: white;
+  border: none;
 }
